--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,34 +1,22 @@
 <footer class=" bg-gray-900">
     <div class="flex flex-col mx-auto w-full max-w-screen-xl p-4 py-6 lg:py-8 xl:py-3">
-        <div class="md:flex md:justify-between xl:items-center xl:mb-5">
+        <div class="md:flex md:justify-between md:items-center lg:mb-5">
           <div class="mb-6 md:mb-0">
               <a routerLink="/" class="flex items-center">
                   <img src="../../assets/images/logo.png" class="h-8 me-3" alt="GrenLab Logo" />
                   <span class="self-center text-2xl font-thin whitespace-nowrap text-white">Green Lab</span>
               </a>
           </div>
-          <div class="footer-link grid grid-cols-2 text-center   text-white font-jost list-none items-center md:text-lg">
-                      <li>
-                          <a routerLink="/" class="hover:text-light-green">Головна</a>
-                      </li>
-                      <li>
-                          <a routerLink="/license" class="hover:text-light-green">Дозвільні документи</a>
-                      </li>
-                      <li>
-                          <a href="../../../assets/files/blank.pdf" download class="hover:text-light-green">Направлення на дослідження</a>
-                      </li>
-                      <li>
-                          <a href="../../../assets/files/price2024greenlab.pdf" target="_blank" class="hover:text-light-green">Прайс-лист</a>
-                      </li>
-                      <li>
-                          <a routerLink="/guide" class="hover:text-light-green">Інструкція взяття проб</a>
-                      </li>
-                      <li>
-                          <a routerLink="/contact" class="hover:text-light-green">Контакти</a>
-                      </li>
+          <div class="footer-link grid grid-cols-2 text-center text-white font-jost list-none items-center md:text-lg">
+            <li><a routerLink="/" class="hover:text-light-green" routerLinkActive="text-light-green" [routerLinkActiveOptions]="{ exact: true }">Головна</a></li>
+            <li><a routerLink="/license" class="hover:text-light-green" routerLinkActive="text-light-green">Дозвільні документи</a></li>
+            <li><a href="../../../assets/files/blank.pdf" download class="hover:text-light-green">Направлення на дослідження</a></li>
+            <li><a href="../../../assets/files/price2024greenlab.pdf" target="_blank" class="hover:text-light-green">Прайс-лист</a></li>
+            <li><a routerLink="/guide" class="hover:text-light-green" routerLinkActive="text-light-green">Інструкція взяття проб</a></li>
+            <li><a routerLink="/contact" class="hover:text-light-green" routerLinkActive="text-light-green">Контакти</a></li>
           </div>
       </div>
-      <hr class="mt-4 lg:my-8 xl:my-0" />
+      <hr class="mt-4 lg:my-0"/>
       <div class="sm:flex sm:items-center sm:justify-between md:mt-3">
           <span class="text-xs text-white dark:text-gray-400 md:text-sm">© 2023-2024 GreenLab. Всі права захищені.
           </span>
