global fix pages

--- a/src/app/components/pages/guide/guide.component.html
+++ b/src/app/components/pages/guide/guide.component.html
@@ -17,17 +17,17 @@
             <p class="mt-3"><b>1. Підготовка:</b></p>
             <p>&ndash; визначиться з типом досліджень</p>
             <p>&ndash; вибрати матеріал для діагностики (з огляду на клінічні ознаки, особливості захворювання і шлях збудника)</p>
-            <p>Підготуйте тварину до аналізу (див. <a routerLink="/pages/preparation.php">Підготуйте тварини до аналізу</a>)</p>
+            <p>Підготуйте тварину до аналізу (див. <a routerLink="/preparation" class="text-blue">Підготуйте тварини до аналізу</a>)</p>
             <p>&ndash; Підготуйте витратні матеріали для відбору, зберігання та транспортування (див. 
-                <a routerLink="/pages/materials.php">Витратний матеріал</a>)
+                <a routerLink="/materials" class="text-blue">Витратний матеріал</a>)
             </p>
             <p class="mt-3"><b>2. Вибірка для дослідження:</b></p>
             <p>&ndash; дотримуватися правил відбору матеріалів для лабораторних досліджень (див. 
-                <a routerLink="/pages/rules.php">Правила збіру проб</a>)
+                <a routerLink="/rules" class="text-blue">Правила збіру проб</a>)
             </p>
             <p class="mt-3"><b>3. Оформлення супровідних документів:</b></p>
             <p>&ndash; маркування пробірок (вказати породу, ім'я тварини та прізвище власника на кожній пробірці, які
-                відправляються в лабораторію) (див. <a routerLink="/pages/marking.php">Маркування проб</a>)</p>
+                відправляються в лабораторію) (див. <a routerLink="/marking" class="text-blue">Маркування проб</a>)</p>
             <p>&ndash; Заповніть напрямок для дослідження</p>
             <div class="inline">
                 <a href="../../../../assets/files/blank.pdf" download class="gradient-button-green text-gray-900 mt-2 text-xs no-underline inline-block px-2 py-2.5 mb-5 rounded-lg font-montserrat uppercase tracking-normal min-w-fit"><img width="20" class="float-left mr-2"
@@ -37,7 +37,7 @@
             </div>
             <p class="mt-3"><b>4. Доставка у лабораторію:</b></p>
             <p>&ndash; після того, як матеріал буде готовий до відправки в лабораторію, звяжіться з нами для доставки у
-                лабораторію за телефоном (див. <a routerLink="/contact">Контакти</a>). Зразки доставляються в
+                лабораторію за телефоном (див. <a routerLink="/contact" class="text-blue">Контакти</a>). Зразки доставляються в
                 лабораторію в день відбіру або на наступний день Новою поштою. </p>
             <p><i class="bg-light-green">Нова пошта №1, м.Чорноморськ, 0962986084, отримувач Зелена Ольга Валеріївна</i></p>
             <p class="mt-3"><b>5. Оплата:</b></p>
