--- a/src/app/components/pages/rules-pages-collection/preparation/preparation.component.html
+++ b/src/app/components/pages/rules-pages-collection/preparation/preparation.component.html
@@ -1,11 +1,15 @@
-<div class="container ss:max-xl:bg-purple ss:max-xl:min-w-full font-nunito text-lg">
-    <div class="flex flex-wrap justify-center ss:max-xl:min-w-full">
-        <h2 class="text-center text-4xl pt-10 text-gray-800 font-semibold">
-            <svg class=" fill-gray-800 mr-3 h-10 inline" xmlns="http://www.w3.org/2000/svg"  viewBox="0 0 448 512"><path d="M64 32C28.7 32 0 60.7 0 96V416c0 35.3 28.7 64 64 64H384c35.3 0 64-28.7 64-64V96c0-35.3-28.7-64-64-64H64zM337 209L209 337c-9.4 9.4-24.6 9.4-33.9 0l-64-64c-9.4-9.4-9.4-24.6 0-33.9s24.6-9.4 33.9 0l47 47L303 175c9.4-9.4 24.6-9.4 33.9 0s9.4 24.6 0 33.9z"/></svg>
-            {{ title }}</h2>
+<div class="container font-nunito text-lg sm:px-6 xl:px-40">
+    <div class="flex flex-wrap justify-center xl:mb-10">
+        <h2 class="text-center text-3xl pt-8 pb-3 text-gray-800 font-semibold">
+            <svg class=" fill-gray-800 mr-3 h-7 inline" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
+            <path
+              d="M64 32C28.7 32 0 60.7 0 96V416c0 35.3 28.7 64 64 64H384c35.3 0 64-28.7 64-64V96c0-35.3-28.7-64-64-64H64zM337 209L209 337c-9.4 9.4-24.6 9.4-33.9 0l-64-64c-9.4-9.4-9.4-24.6 0-33.9s24.6-9.4 33.9 0l47 47L303 175c9.4-9.4 24.6-9.4 33.9 0s9.4 24.6 0 33.9z" />
+          </svg>
+          {{ title }}
+        </h2>
     </div>
-    <div class="flex flex-wrap justify-between ss:max-xl:min-w-0 ss:max-xl:bg-custom_green">
-        <div class="preparation my-8">
+    <div class="flex flex-wrap justify-between sm:mb-10">
+        <div class="my-10">
             <p>Як і багато методів діагностики, лабораторні дослідження призначені для оцінки здоров&rsquo;я вашої тварини. Існує ряд правил підготовки тварини до підбору аналізів, дотримуючись яких ви гарантовано отримаєте точні і достовірні результати.</p>
             <p class="my-8"><strong>Підготовка тварини до аналізу методом ПЛР-РВ</strong></p>
             <p>Перш ніж збирати матеріал, переконайтеся, що:</p>
@@ -13,7 +17,7 @@
                 <li>З моменту останнього щеплення пройшло більше 21 дня.</li>
                 <li>перерва між прийомом антибіотиків і відбором проб становить не менше 10-14 днів.</li>
             </ol>
-            <p><strong>Забір крові:</strong></p>
+            <p class="my-3"><strong>Забір крові:</strong></p>
             <ol class="list-counter-circle">
                 <li>рекомендується проводити натщесерце.</li>
                 <li>Пропустіть аналіз, щоб призначити перед початком лікування або не раніше, ніж через 10 &ndash; 14
@@ -22,51 +26,51 @@
                 <li>Відбір проб перед інфузійною терапією.</li>
                 <li>антикоагулянтна терапія повинна підтримуватися принаймні 24 години з останнього разу, коли ви востаннє використовували препарати для зменшення тромбозу.</li>
             </ol>
-            <p><strong>Отримання змивів від кон&rsquo;юнктиви:</strong></p>
+            <p class="my-3"><strong>Отримання змивів від кон&rsquo;юнктиви:</strong></p>
             <ol class="list-counter-circle">
                 <li>Виберіть матеріал до використання флуоресцеїну і місцевих анестетики.</li>
                 <li>Відбір аналізу перед початком прийому ліків або виключіть застосування місцевих препаратів за кілька днів до дослідження (кількість часу залежить від ліків).</li>
             </ol>
-            <p><strong>Отримання змивів з носа:</strong></p>
+            <p class="my-3"><strong>Отримання змивів з носа:</strong></p>
             <ol class="list-counter-circle">
                 <li>Відбір аналізу перед початком прийому ліків або виключіть застосування місцевих препаратів за кілька днів до дослідження (кількість часу залежить від ліків).</li>
             </ol>
-            <p><strong>Отримання ротоглоткових зіскрібків, змивів:</strong></p>
+            <p class="my-3"><strong>Отримання ротоглоткових зіскрібків, змивів:</strong></p>
             <ol class="list-counter-circle">
                 <li>Підбір матеріалу не раніше, ніж через 2-4 години після трапези.</li>
                 <li>Відбір аналізу перед початком прийому ліків або виключіть застосування місцевих препаратів за кілька днів до дослідження (кількість часу залежить від ліків).</li>
             </ol>
-            <p><strong>Відбір проб калу або зішкріб з прямої кишки:</strong></p>
+            <p class="my-3"><strong>Відбір проб калу або зішкріб з прямої кишки:</strong></p>
             <ol class="list-counter-circle">
                 <li>За 2-3 дні до того, як матеріал буде зібраний, припиніть давати: проносні засоби (в тому числі різні проносні масла), антациди, сорбенти.</li>
                 <li>при використанні рентгенівських контрастних засобів перерва з відбором проб становить 36-48 годин.</li>
                 <li>Виберіть матеріал перед клізмою.</li>
             </ol>
-            <p><strong>Отримання шкребка з урогенітального тракту або піхви:</strong></p>
+            <p class="my-3"><strong>Отримання шкребка з урогенітального тракту або піхви:</strong></p>
             <ol class="list-counter-circle">
                 <li>За 24 години до дослідження скасовують застосування місцевих ліків, а також не проводять гігієну зовнішніх статевих органів.</li>
                 <li>Переконайтеся, що період між останнім сечовипусканням і відбором проб становить не менше 2-3 годин.</li>
                 <li>При наявності листкових виділень рекомендується приймати через 15-20 хвилин після сечовипускання</li>
             </ol>
-            <p><strong>Отримання асцитної рідини:</strong></p>
+            <p class="my-3"><strong>Отримання асцитної рідини:</strong></p>
             <ol class="list-counter-circle">
                 <li>особливих вказівок по підготовці до відбору немає.</li>
             </ol>
-            <p><strong>Отримання синовіальної рідини:</strong></p>
+            <p class="my-3"><strong>Отримання синовіальної рідини:</strong></p>
             <ol class="list-counter-circle">
                 <li>Не відбирайте проби, якщо у тварини є бактерія або інфекція в суглобі м’яких тканин</li>
             </ol>
-            <p><strong>Вибірка сперми:</strong></p>
+            <p class="my-3"><strong>Вибірка сперми:</strong></p>
             <ol class="list-counter-circle">
                 <li>особливих вказівок по підготовці до відбору немає.</li>
             </ol>
-            <p><strong>Підготовка тварини до біохімічних досліджень, гормональних тестів:</strong></p>
+            <p class="my-3"><strong>Підготовка тварини до біохімічних досліджень, гормональних тестів:</strong></p>
             <p>Перед взяттям крові необхідно виключити:</p>
             <ol class="list-counter-circle">
                 <li>Фізичну активність.</li>
                 <li>Не рекомендується здавати кров відразу після рентгенів, УЗД, фізіотерапевтичних процедур.</li>
             </ol>
-            <p><strong>Забір крові:</strong></p>
+            <p class="my-3"><strong>Забір крові:</strong></p>
             <ol class="list-counter-circle">
                 <li>Утримуйтеся натщесерце.</li>
                 <li>Кров забирають до введення препаратів і інфузійної терапії.</li>
@@ -74,7 +78,7 @@
                 <li>При відборі проб на кортизол тварина повинна бути спокійною.</li>
 
             </ol>
-            <p>Ці правила підготовки тварини до аналізів допоможуть забезпечити отримання точних та надійних результатів досліджень.</p>
+            <p class="my-3">Ці правила підготовки тварини до аналізів допоможуть забезпечити отримання точних та надійних результатів досліджень.</p>
         </div>
     </div>
 </div>
