--- a/src/app/components/pages/services-pages-collection/hormones/hormones.component.html
+++ b/src/app/components/pages/services-pages-collection/hormones/hormones.component.html
@@ -1,15 +1,15 @@
-<div class="container ss:max-xl:bg-purple ss:max-xl:min-w-full font-nunito text-md">
-    <div class="flex flex-wrap justify-center ss:max-xl:min-w-full">
-        <h2 class="text-center text-4xl pt-10 text-gray-800 font-semibold">
-            <svg class=" fill-gray-800 mr-3 h-10 inline" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
-                <path
-                    d="M160 32c0-17.7 14.3-32 32-32h32c17.7 0 32 14.3 32 32c17.7 0 32 14.3 32 32V288c0 17.7-14.3 32-32 32c0 17.7-14.3 32-32 32H192c-17.7 0-32-14.3-32-32c-17.7 0-32-14.3-32-32V64c0-17.7 14.3-32 32-32zM32 448H320c70.7 0 128-57.3 128-128s-57.3-128-128-128V128c106 0 192 86 192 192c0 49.2-18.5 94-48.9 128H480c17.7 0 32 14.3 32 32s-14.3 32-32 32H320 32c-17.7 0-32-14.3-32-32s14.3-32 32-32zm80-64H304c8.8 0 16 7.2 16 16s-7.2 16-16 16H112c-8.8 0-16-7.2-16-16s7.2-16 16-16z" />
-            </svg>
-            {{ title }}
+<div class="container font-nunito text-lg sm:px-6 xl:px-40 w-full">
+    <div class="flex flex-wrap justify-center xl:mb-10">
+        <h2 class="text-center text-3xl pt-8 pb-3 text-gray-800 font-semibold">
+            <svg class=" fill-gray-800 mr-3 h-7 inline" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+            <path
+              d="M160 32c0-17.7 14.3-32 32-32h32c17.7 0 32 14.3 32 32c17.7 0 32 14.3 32 32V288c0 17.7-14.3 32-32 32c0 17.7-14.3 32-32 32H192c-17.7 0-32-14.3-32-32c-17.7 0-32-14.3-32-32V64c0-17.7 14.3-32 32-32zM32 448H320c70.7 0 128-57.3 128-128s-57.3-128-128-128V128c106 0 192 86 192 192c0 49.2-18.5 94-48.9 128H480c17.7 0 32 14.3 32 32s-14.3 32-32 32H320 32c-17.7 0-32-14.3-32-32s14.3-32 32-32zm80-64H304c8.8 0 16 7.2 16 16s-7.2 16-16 16H112c-8.8 0-16-7.2-16-16s7.2-16 16-16z" />
+          </svg>
+          {{ title }}
         </h2>
     </div>
-    <div class="flex flex-wrap justify-between ss:max-xl:min-w-0 ss:max-xl:bg-custom_green">
-        <div class="my-8">
+    <div class="flex flex-wrap justify-between w-full">
+        <div class="my-10 w-full">
             <p class="text-center">Термін виконання 2-3 дні</p>
             <table>
                 <tbody>
@@ -20,36 +20,34 @@
                     </tr>
                     <tr>
                         <td>Кортизол</td>
-                        <td>сироватка</td>
+                        <td>&bull; сироватка</td>
                         <td>300</td>
                     </tr>
                     <tr>
                         <td>Т3 (трийодтиронін) загальний</td>
-                        <td>сироватка</td>
+                        <td>&bull; сироватка</td>
                         <td>300</td>
                     </tr>
                     <tr>
                         <td>Т4 (тироксин) загальний</td>
-                        <td>сироватка</td>
+                        <td>&bull; сироватка</td>
                         <td>300</td>
                     </tr>
                     <tr>
                         <td>Прогестерон</td>
-                        <td>сироватка</td>
+                        <td>&bull; сироватка</td>
                         <td>300</td>
                     </tr>
                     <tr>
                         <td>ТТГ (тиреотропний гормон)</td>
-                        <td>сироватка</td>
+                        <td>&bull; сироватка</td>
                         <td>300</td>
                     </tr>
                 </tbody>
             </table>
 
 
-            <h2 style="color: grey; margin-top: 5%">Гормональні панелі
-            </h2> <br>
-
+            <h2 class="text-center text-3xl pt-8 pb-3 text-gray-800 font-semibold">Гормональні панелі</h2>
             <table>
                 <tbody>
                     <tr>
@@ -62,7 +60,7 @@
                             - Т3 (трийодтиронін) загальний<br>
                             - Т4 (тироксин) загальний
                         </td>
-                        <td>сироватка</td>
+                        <td>&bull; сироватка</td>
                         <td>500</td>
                     </tr>
                     <tr>
@@ -71,7 +69,7 @@
                             - рівень кортизолу - 4 години<br>
                             - рівень кортизолу - 8 годин
                         </td>
-                        <td>сироватка</td>
+                        <td>&bull; сироватка</td>
                         <td>750</td>
                     </tr>
                 </tbody>
