--- a/src/app/components/pages/rules-pages-collection/rules-for-tests/rules.component.html
+++ b/src/app/components/pages/rules-pages-collection/rules-for-tests/rules.component.html
@@ -1,13 +1,17 @@
-<div class="container ss:max-xl:bg-purple ss:max-xl:min-w-full font-nunito text-lg">
-    <div class="flex flex-wrap justify-center ss:max-xl:min-w-full">
-        <h2 class="text-center text-4xl pt-10 text-gray-800 font-semibold">
-            <svg class=" fill-gray-800 mr-3 h-10 inline" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512"><path d="M0 80v48c0 17.7 14.3 32 32 32H48 96V80c0-26.5-21.5-48-48-48S0 53.5 0 80zM112 32c10 13.4 16 30 16 48V384c0 35.3 28.7 64 64 64s64-28.7 64-64v-5.3c0-32.4 26.3-58.7 58.7-58.7H480V128c0-53-43-96-96-96H112zM464 480c61.9 0 112-50.1 112-112c0-8.8-7.2-16-16-16H314.7c-14.7 0-26.7 11.9-26.7 26.7V384c0 53-43 96-96 96H368h96z"/></svg>
-            {{ title }}</h2>
+<div class="container font-nunito text-lg sm:px-6 xl:px-40">
+    <div class="flex flex-wrap justify-center xl:mb-10">
+        <h2 class="text-center text-3xl pt-8 pb-3 text-gray-800 font-semibold">
+            <svg class=" fill-gray-800 mr-3 h-7 inline" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512">
+            <path
+              d="M0 80v48c0 17.7 14.3 32 32 32H48 96V80c0-26.5-21.5-48-48-48S0 53.5 0 80zM112 32c10 13.4 16 30 16 48V384c0 35.3 28.7 64 64 64s64-28.7 64-64v-5.3c0-32.4 26.3-58.7 58.7-58.7H480V128c0-53-43-96-96-96H112zM464 480c61.9 0 112-50.1 112-112c0-8.8-7.2-16-16-16H314.7c-14.7 0-26.7 11.9-26.7 26.7V384c0 53-43 96-96 96H368h96z" />
+          </svg>
+          {{ title }}
+        </h2>
     </div>
-    <div class="flex flex-wrap justify-between ss:max-xl:min-w-0 ss:max-xl:bg-custom_green">
-        <div class="rules my-8">
+    <div class="flex flex-wrap justify-between">
+        <div class="my-8">
             <p>При відборі проб для ПЛР-РВ досліджень необхідно дотримуватися ряду правил, які мінімізують приймати неточні результати:</p>
-            <ol class="list-counter-circle">
+            <ol class="list-counter-circle my-3">
                 <li>дотримуватися правил асептиків і антисептиків</li>
                 <li>Уникайте потрапляння дезінфекційних засобів в пробірку</li>
                 <li>Не дозволяйте стороннім частинкам потрапити в зразок (шерсть, бруд, вата)</li>
