--- a/src/app/components/pages/rules-pages-collection/selection-pages-collection/conjunctiva-sampling/conjunctiva-sampling.component.html
+++ b/src/app/components/pages/rules-pages-collection/selection-pages-collection/conjunctiva-sampling/conjunctiva-sampling.component.html
@@ -1,16 +1,16 @@
-<div class="container ss:max-xl:bg-purple ss:max-xl:min-w-full font-nunito text-lg">
-    <div class="flex flex-wrap justify-center ss:max-xl:min-w-full">
-        <h2 class="text-center text-4xl pt-10 text-gray-800 font-semibold">
-            <svg class=" fill-gray-800 mr-3 h-10 inline" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512">
-                <path
-                    d="M288 32c-80.8 0-145.5 36.8-192.6 80.6C48.6 156 17.3 208 2.5 243.7c-3.3 7.9-3.3 16.7 0 24.6C17.3 304 48.6 356 95.4 399.4C142.5 443.2 207.2 480 288 480s145.5-36.8 192.6-80.6c46.8-43.5 78.1-95.4 93-131.1c3.3-7.9 3.3-16.7 0-24.6c-14.9-35.7-46.2-87.7-93-131.1C433.5 68.8 368.8 32 288 32zM144 256a144 144 0 1 1 288 0 144 144 0 1 1 -288 0zm144-64c0 35.3-28.7 64-64 64c-7.1 0-13.9-1.2-20.3-3.3c-5.5-1.8-11.9 1.6-11.7 7.4c.3 6.9 1.3 13.8 3.2 20.7c13.7 51.2 66.4 81.6 117.6 67.9s81.6-66.4 67.9-117.6c-11.1-41.5-47.8-69.4-88.6-71.1c-5.8-.2-9.2 6.1-7.4 11.7c2.1 6.4 3.3 13.2 3.3 20.3z" />
-            </svg>
-            {{ title }}
+<div class="container font-nunito text-lg sm:px-6 xl:px-40">
+    <div class="flex flex-wrap justify-center xl:mb-10">
+        <h2 class="text-center text-3xl pt-8 pb-3 text-gray-800 font-semibold">
+            <svg class=" fill-gray-800 mr-3 h-7 inline" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512">
+            <path
+              d="M288 32c-80.8 0-145.5 36.8-192.6 80.6C48.6 156 17.3 208 2.5 243.7c-3.3 7.9-3.3 16.7 0 24.6C17.3 304 48.6 356 95.4 399.4C142.5 443.2 207.2 480 288 480s145.5-36.8 192.6-80.6c46.8-43.5 78.1-95.4 93-131.1c3.3-7.9 3.3-16.7 0-24.6c-14.9-35.7-46.2-87.7-93-131.1C433.5 68.8 368.8 32 288 32zM144 256a144 144 0 1 1 288 0 144 144 0 1 1 -288 0zm144-64c0 35.3-28.7 64-64 64c-7.1 0-13.9-1.2-20.3-3.3c-5.5-1.8-11.9 1.6-11.7 7.4c.3 6.9 1.3 13.8 3.2 20.7c13.7 51.2 66.4 81.6 117.6 67.9s81.6-66.4 67.9-117.6c-11.1-41.5-47.8-69.4-88.6-71.1c-5.8-.2-9.2 6.1-7.4 11.7c2.1 6.4 3.3 13.2 3.3 20.3z" />
+          </svg>
+          {{ title }}
         </h2>
     </div>
-    <div class="flex flex-wrap justify-between ss:max-xl:min-w-0 ss:max-xl:bg-custom_green">
-        <div class="my-8">
-            <p>Витратний матеріал: урогенітальний зонд-2 шт, Еппендорф з транспортним середовищем</p>
+    <div class="flex flex-wrap justify-between">
+        <div class="my-10">
+            <p class="my-3">Витратний матеріал: урогенітальний зонд-2 шт, Еппендорф з транспортним середовищем</p>
             <p>Порядок забору:</p>
             <ol class="list-counter-circle">
                 <li>при наявності гнійних, слизових очних виділень видаліть їх за допомогою стерильного марлевого
@@ -27,9 +27,9 @@
                 <li>після забору матеріалу щільно закрийте Еппендорф (до характерного клацання);</li>
                 <li>промаркіруйте Еппендорф, вказавши на ньому вид тварини, кличку, прізвище власника, за бажанням
                     &mdash;
-                    вид дослідження (див. Маркування проб.)</li>
+                    вид дослідження (див. <a routerLink="/marking" class="text-blue">Маркування проб</a>)</li>
             </ol>
-            <p>Умови зберігання і транспортування проби: +2 &ndash; +8&deg;С</p>
+            <p class="my-3">Умови зберігання і транспортування проби: +2 &ndash; +8&deg;С</p>
         </div>
     </div>
 </div>
