--- a/src/app/components/pages/rules-pages-collection/selection-pages-collection/rectal-sampling/rectal-sampling.component.html
+++ b/src/app/components/pages/rules-pages-collection/selection-pages-collection/rectal-sampling/rectal-sampling.component.html
@@ -1,16 +1,16 @@
-<div class="container ss:max-xl:bg-purple ss:max-xl:min-w-full font-nunito text-lg">
-    <div class="flex flex-wrap justify-center ss:max-xl:min-w-full">
-        <h2 class="text-center text-4xl pt-10 text-gray-800 font-semibold">
-            <svg class=" fill-gray-800 mr-3 h-10 inline" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512">
-                <path
-                    d="M0 32C0 14.3 14.3 0 32 0H352c17.7 0 32 14.3 32 32V64c0 17.7-14.3 32-32 32H32C14.3 96 0 81.7 0 64V32zm32 96H352V448c0 35.3-28.7 64-64 64H96c-35.3 0-64-28.7-64-64V416H144c8.8 0 16-7.2 16-16s-7.2-16-16-16H32V320H144c8.8 0 16-7.2 16-16s-7.2-16-16-16H32V224H144c8.8 0 16-7.2 16-16s-7.2-16-16-16H32V128z" />
-            </svg>
-            {{ title }}
+<div class="container font-nunito text-lg sm:px-6 xl:px-40">
+    <div class="flex flex-wrap justify-center xl:mb-10">
+        <h2 class="text-center text-3xl pt-8 pb-3 text-gray-800 font-semibold">
+            <svg class=" fill-gray-800 mr-3 h-7 inline" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512">
+            <path
+              d="M0 32C0 14.3 14.3 0 32 0H352c17.7 0 32 14.3 32 32V64c0 17.7-14.3 32-32 32H32C14.3 96 0 81.7 0 64V32zm32 96H352V448c0 35.3-28.7 64-64 64H96c-35.3 0-64-28.7-64-64V416H144c8.8 0 16-7.2 16-16s-7.2-16-16-16H32V320H144c8.8 0 16-7.2 16-16s-7.2-16-16-16H32V224H144c8.8 0 16-7.2 16-16s-7.2-16-16-16H32V128z" />
+          </svg>
+          {{ title }}
         </h2>
     </div>
-    <div class="flex flex-wrap justify-between ss:max-xl:min-w-0 ss:max-xl:bg-custom_green">
-        <div class="my-8">
-            <p>Витратний матеріал: урогенітальний зонд, Еппендорф з транспортним середовищем</p>
+    <div class="flex flex-wrap justify-between">
+        <div class="my-10">
+            <p class="my-3">Витратний матеріал: урогенітальний зонд, Еппендорф з транспортним середовищем</p>
             <p>Порядок забору:</p>
             <ol class="list-counter-circle">
                 <li>стерильним ватним тампоном проведіть очищення області ануса від виділень (при наявності таких);</li>
@@ -24,9 +24,9 @@
                 <li>після забору матеріалу щільно закрийте Еппендорф (до характерного клацання);</li>
                 <li>промаркіруйте Еппендорф, вказавши на ньому вид тварини, кличку, прізвище власника, за бажанням
                     &mdash;
-                    вид дослідження (див. Маркування проб.)</li>
+                    вид дослідження (див. <a routerLink="/marking" class="text-blue">Маркування проб</a> )</li>
             </ol>
-            <p>Умови зберігання і транспортування проби: +2 &ndash; +8&deg;С</p>
+            <p class="my-3">Умови зберігання і транспортування проби: +2 &ndash; +8&deg;С</p>
         </div>
     </div>
 </div>
