--- a/src/styles.scss
+++ b/src/styles.scss
@@ -153,8 +153,6 @@ hr {
 .list-counter-circle {
     list-style: none;
     counter-reset: list;
-    margin: 0;
-    padding: 0;
     overflow: inherit;
 
 }
@@ -178,8 +176,6 @@ hr {
     position: absolute;
     height: 2rem;
     left: -1.5rem;
-    // top: -.25rem;
-    // bottom: -.25rem;
     width: 2rem;
     line-height: 1.5rem;
     border-radius: 1.23rem;
@@ -189,43 +185,46 @@ hr {
     background: #7b1fa2;
 }
 
-
 table {
-    max-width: 100%;
-    margin-bottom: 20px;
+    width: 100%;
+    margin: 2rem 0 2rem 0;
     border: 5px solid #fff;
     border-top: 5px solid #fff;
     border-bottom: 3px solid #fff;
     border-collapse: collapse;
-    outline: 3px solid #7accee;
+    outline: 3px solid #C1D8C3;
     font-size: 0.75rem;
-    background: #fff!important;
+    background: #fff !important;
 }
+
 table th {
     font-weight: bold;
     padding: 0.75rem;
-    background: #7accee;
+    background: #C1D8C3;
     border: none;
     text-align: center;
     font-size: 1rem;
     border-top: 3px solid #fff;
-    border-bottom: 3px solid #7accee;
+    border-bottom: 3px solid #C1D8C3;
 }
+
 table td {
     padding: 10px;
     border: none;
     text-align: center;
     border-top: 3px solid #fff;
     border-bottom: 3px solid #fff;
-    font-size: 0.75rem;
+    font-size: 1rem;
 }
-table tbody tr:nth-child(even){
-    background: #f8f8f8!important;
+
+table tbody tr:nth-child(even) {
+    background: #ebedf7 !important;
 }
+
 
 
 // @import "../stylesheets/scss-file";
 
 
-html, body { height: 100%; }
+html, body { height: 100%;  }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
