fix pages padding and license page

--- a/src/app/components/pages/rules-pages-collection/marking/marking.component.html
+++ b/src/app/components/pages/rules-pages-collection/marking/marking.component.html
@@ -9,7 +9,7 @@
         </h2>
     </div>
     <div class="flex flex-wrap justify-between">
-        <div class="my-10">
+        <div class="my-10 text-base md:text-lg md:leading-relaxed md:mb-8 xl:text-base">
             <p>Важливий момент на етапі забору проб — це їх маркування перед відправкою в лабораторію. Дана процедура дозволяє уникнути помилок при ідентифікації біологічного матеріалу.</p>
             <p>Для того, щоб підписати пробу, можна використовувати незмивні маркери, що клеяться стікери, головною властивістю яких є неможливість видалення (зникнення) під час зберігання і транспортування матеріалу.</p>
             <p>Інформація, яка повинна бути на пробірці з матеріалом:</p>
