--- a/src/app/components/pages/rules-pages-collection/materials/materials.component.html
+++ b/src/app/components/pages/rules-pages-collection/materials/materials.component.html
@@ -9,7 +9,7 @@
         </h2>
     </div>
     <div class="flex flex-wrap justify-between">
-        <div class="preparation my-10">
+        <div class="my-10 text-base md:text-lg md:leading-relaxed md:mb-8 xl:text-base">
             <p class="my-6">Вибір витратних матеріалів є важливим моментом при підготовці до відбору проб для дослідження. Використовуйте тільки одноразові, стерильні пробірки, контейнери, зонди, рекомендовані лабораторією, так як вони найбільш підходять для збору, зберігання і транспортування біологічного матеріалу. Так що стандартом при виборі антикоагулянтів для лабораторних досліджень є ЕДТА, що запобігає згортання крові в зразку. Використання транспортного ПЛР-середовища дозволяє надійно зберегти відібрані вами змиви і подряпини.</p>
             <p class="my-6">Якщо вам потрібно отримати цілу (стабілізовану кров) &ndash; використовуйте пробірки з ЕДТА, а при необхідності сироватки &ndash; пробірки зі згортанням активаторів (відповідне маркування знаходиться на пробірці)</p>
             <p class="my-6">Використовуйте урогенітальний зонд для збору матеріалу з різних слизових оболонок.</p>
