--- a/src/app/components/pages/rules-pages-collection/preparation/preparation.component.html
+++ b/src/app/components/pages/rules-pages-collection/preparation/preparation.component.html
@@ -9,7 +9,7 @@
         </h2>
     </div>
     <div class="flex flex-wrap justify-between sm:mb-10">
-        <div class="my-10">
+        <div class="my-10 text-base md:text-lg md:leading-relaxed md:mb-8 xl:text-base">
             <p>Як і багато методів діагностики, лабораторні дослідження призначені для оцінки здоров&rsquo;я вашої тварини. Існує ряд правил підготовки тварини до підбору аналізів, дотримуючись яких ви гарантовано отримаєте точні і достовірні результати.</p>
             <p class="my-8"><strong>Підготовка тварини до аналізу методом ПЛР-РВ</strong></p>
             <p>Перш ніж збирати матеріал, переконайтеся, що:</p>
