--- a/src/app/components/pages/services-pages-collection/bacterium-research/bacterium.component.html
+++ b/src/app/components/pages/services-pages-collection/bacterium-research/bacterium.component.html
@@ -9,7 +9,7 @@
         </h2>
     </div>
     <div class="flex flex-wrap justify-between w-full">
-        <div class="my-10 w-full">
+        <div class="my-10 text-base md:text-lg md:leading-relaxed md:mb-8 xl:text-base w-full">
             <p>Прийом зразків для проведення бактеріологічних
                 досліджень - Понеділок - Четвер включно. Термін виконання 5 днів
             </p>
