--- a/src/app/components/pages/services-pages-collection/info/info.component.html
+++ b/src/app/components/pages/services-pages-collection/info/info.component.html
@@ -9,7 +9,7 @@
         </h2>
     </div>
     <div class="flex flex-wrap justify-between">
-        <div class="my-10">
+        <div class="my-10 text-base md:text-lg md:leading-relaxed md:mb-8 xl:text-base">
             <p>На сьогоднішній день одним з найбільш надійних і ефективних методів діагностики інфекційних і
                 паразитарних захворювань вихованців є дослідження за допомогою полімеразної ланцюгової реакції (ПЛР).
                 Він дозволяє виявити ДНК або РНК збудника в біологічному матеріалі.</p>
