--- a/src/app/components/pages/license/license.component.html
+++ b/src/app/components/pages/license/license.component.html
@@ -1,15 +1,15 @@
-<div class="container ss:max-xl:bg-purple ss:max-xl:min-w-full font-nunito text-lg md:px-6">
-    <div class="flex flex-wrap justify-center ss:max-xl:min-w-full">
-        <h2 class="text-center text-4xl pt-10 text-gray-800 font-semibold">
-            <svg class=" fill-gray-800 mr-3 h-10 inline" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512">
-                <path
-                    d="M0 64C0 28.7 28.7 0 64 0H224V128c0 17.7 14.3 32 32 32H384v38.6C310.1 219.5 256 287.4 256 368c0 59.1 29.1 111.3 73.7 143.3c-3.2 .5-6.4 .7-9.7 .7H64c-35.3 0-64-28.7-64-64V64zm384 64H256V0L384 128zM288 368a144 144 0 1 1 288 0 144 144 0 1 1 -288 0zm211.3-43.3c-6.2-6.2-16.4-6.2-22.6 0L416 385.4l-28.7-28.7c-6.2-6.2-16.4-6.2-22.6 0s-6.2 16.4 0 22.6l40 40c6.2 6.2 16.4 6.2 22.6 0l72-72c6.2-6.2 6.2-16.4 0-22.6z" />
-            </svg>
-            {{ title }}
+<div class="container font-nunito text-lg sm:px-6 xl:px-40 w-full">
+    <div class="flex flex-wrap justify-center xl:mb-10">
+        <h2 class="text-center text-3xl pt-8 pb-3 text-gray-800 font-semibold">
+            <svg class=" fill-gray-800 mr-3 h-7 inline" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512">
+            <path
+              d="M0 64C0 28.7 28.7 0 64 0H224V128c0 17.7 14.3 32 32 32H384v38.6C310.1 219.5 256 287.4 256 368c0 59.1 29.1 111.3 73.7 143.3c-3.2 .5-6.4 .7-9.7 .7H64c-35.3 0-64-28.7-64-64V64zm384 64H256V0L384 128zM288 368a144 144 0 1 1 288 0 144 144 0 1 1 -288 0zm211.3-43.3c-6.2-6.2-16.4-6.2-22.6 0L416 385.4l-28.7-28.7c-6.2-6.2-16.4-6.2-22.6 0s-6.2 16.4 0 22.6l40 40c6.2 6.2 16.4 6.2 22.6 0l72-72c6.2-6.2 6.2-16.4 0-22.6z" />
+          </svg>
+          {{ title }}
         </h2>
     </div>
-    <div class="flex flex-wrap justify-between ss:max-xl:min-w-0 ss:max-xl:bg-custom_green">
-        <div class="my-8">
+    <div class="flex flex-wrap justify-between">
+        <div class="my-10 text-base md:text-lg md:leading-relaxed md:mb-8 xl:text-base w-full">
             <p>Лабораторія "Грін ПЛР Лаб" сертифікована за всіма критеріями відповідно до вимог та норм законодавства
                 України. Усі аналізи виконуються виключно на приладах та устаткуванні, які пройшли метрологічну
                 перевірку та відповідають усім вимогам та критеріям діагностичної лабораторії.</p>
