--- a/src/app/components/pages/rules-pages-collection/rules-for-tests/rules.component.html
+++ b/src/app/components/pages/rules-pages-collection/rules-for-tests/rules.component.html
@@ -9,7 +9,7 @@
         </h2>
     </div>
     <div class="flex flex-wrap justify-between">
-        <div class="my-8">
+        <div class="my-10 text-base md:text-lg md:leading-relaxed md:mb-8 xl:text-base">
             <p>При відборі проб для ПЛР-РВ досліджень необхідно дотримуватися ряду правил, які мінімізують приймати неточні результати:</p>
             <ol class="list-counter-circle my-3">
                 <li>дотримуватися правил асептиків і антисептиків</li>
