--- a/src/app/components/pages/rules-pages-collection/selection-pages-collection/blood-sampling/blood-sampling.component.html
+++ b/src/app/components/pages/rules-pages-collection/selection-pages-collection/blood-sampling/blood-sampling.component.html
@@ -9,7 +9,7 @@
         </h2>
     </div>
     <div class="flex flex-wrap justify-between">
-        <div class="my-8">
+        <div class="my-10 text-base md:text-lg md:leading-relaxed md:mb-8 xl:text-base">
             <p class="my-3"><strong>Кров з EDTA</strong></p>
             <p class="my-3"><strong>Витратний матеріал: </strong>стерильна одноразова голка, пробірка з EDTA</p>
             <p class="my-3">Порядок огорожі:</p>
