--- a/src/app/components/pages/rules-pages-collection/selection-pages-collection/nose-sampling/nose-sampling.component.html
+++ b/src/app/components/pages/rules-pages-collection/selection-pages-collection/nose-sampling/nose-sampling.component.html
@@ -9,7 +9,7 @@
         </h2>
     </div>
     <div class="flex flex-wrap justify-between">
-        <div class="my-10">
+        <div class="my-10 text-base md:text-lg md:leading-relaxed md:mb-8 xl:text-base">
             <p class="my-3">Витратний матеріал: урогенітальний зонд-2 шт, Еппендорф з транспортним середовищем</p>
             <p>Порядок забору:</p>
             <ol class="list-counter-circle">
