--- a/src/app/components/pages/services-pages-collection/diagnostics-panel-collections/diagnostics-panel-dogs/diagnostics-panel-dogs.component.html
+++ b/src/app/components/pages/services-pages-collection/diagnostics-panel-collections/diagnostics-panel-dogs/diagnostics-panel-dogs.component.html
@@ -9,7 +9,7 @@
         </h2>
     </div>
     <div class="flex flex-wrap justify-between w-full">
-        <div class="my-10 w-full">
+        <div class="my-10 text-base md:text-lg md:leading-relaxed md:mb-8 xl:text-base w-full">
             <p class="text-center">Термін виконання 2-3 дні</p>
             <table>
                 <tbody>
