--- a/src/app/components/pages/home/home.component.html
+++ b/src/app/components/pages/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="home-page">
-  <section class="main-image bg-center bg-no-repeat bg-main-image bg-blend-multiply lg:bg-cover">
+  <section class="main-image bg-center bg-no-repeat bg-main-image bg-blend-multiply sm:bg-cover">
     <div class="mx-auto max-w-screen-xl text-center pt-14 pb-0">
       <h2 class="mb-4 mt-4 text-6xl font-nunito font-normal tracking-tight leading-none text-white md:text-7xl md:mt-8 lg:text-8xl">
         <span class="text-custom_green">Green</span>Lab
