--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="flex flex-col min-h-full ss:max-xl:min-w-full">
+<div class="flex flex-col min-h-full min-w-full">
   <div #topbar>
     <app-topbar></app-topbar>
   </div>
