--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -7,9 +7,14 @@ header {
 }
 
 @media screen and (max-width: 1023px) {
-    nav a {
+
+
+    a:not(.header-image) {
         display: none;
     }
+    .group {
+        display: none;
+    } 
 }
 
 @media screen and (min-width: 1024px) {
