--- a/src/app/components/pages/services-pages-collection/diagnostics-panel-collections/diagnostics-panel-cats/diagnostics-panel-cats.component.html
+++ b/src/app/components/pages/services-pages-collection/diagnostics-panel-collections/diagnostics-panel-cats/diagnostics-panel-cats.component.html
@@ -1,4 +1,4 @@
-<div class="container font-nunito text-lg sm:px-6 xl:px-40 w-full">
+<div class="container font-nunito text-lg sm:px-6 xl:px-40">
     <div class="flex flex-wrap justify-center xl:mb-10">
         <h2 class="text-center text-3xl pt-8 pb-3 text-gray-800 font-semibold">
             <svg class=" fill-gray-800 mr-3 h-7 inline" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512">
@@ -8,8 +8,9 @@
           {{ title }}
         </h2>
     </div>
-    <div class="flex flex-wrap justify-between w-full">
-        <div class="my-10 text-base md:text-lg md:leading-relaxed md:mb-8 xl:text-base w-full">
+    <!-- flex flex-wrap justify-center  -->
+    <div class="min-h-full"> 
+        <div class="my-10 text-base md:text-lg md:leading-relaxed md:mb-8 xl:text-base">
             <p class="text-center">Термін виконання 2-3 дні</p>
             <table>
                 <tbody>
