--- a/src/app/components/pages/services-pages-collection/diagnostics-panel-collections/diagnostics-panel-cats/diagnostics-panel-cats.component.html
+++ b/src/app/components/pages/services-pages-collection/diagnostics-panel-collections/diagnostics-panel-cats/diagnostics-panel-cats.component.html
@@ -8,9 +8,8 @@
           {{ title }}
         </h2>
     </div>
-    <!-- flex flex-wrap justify-center  -->
-    <div class="min-h-full"> 
-        <div class="my-10 text-base md:text-lg md:leading-relaxed md:mb-8 xl:text-base">
+    <div class="flex flex-wrap justify-between w-full">
+        <div class="my-10 text-base md:text-lg md:leading-relaxed md:mb-8 xl:text-base w-full">
             <p class="text-center">Термін виконання 2-3 дні</p>
             <table>
                 <tbody>
