--- a/src/app/components/pages/guide/guide.component.html
+++ b/src/app/components/pages/guide/guide.component.html
@@ -38,8 +38,8 @@
             <p class="mt-3"><b>4. Доставка у лабораторію:</b></p>
             <p>&ndash; після того, як матеріал буде готовий до відправки в лабораторію, звяжіться з нами для доставки у
                 лабораторію за телефоном (див. <a routerLink="/contact" class="text-blue">Контакти</a>). Зразки доставляються в
-                лабораторію в день відбіру або на наступний день Новою поштою. </p>
-            <p><i class="bg-light-green">Нова пошта №1, м.Чорноморськ, 0962986084, отримувач Зелена Ольга Валеріївна</i></p>
+                лабораторію в день відбіру або на наступний день <strong>"Новою поштою"</strong> за адресою: </p>
+            <p><i class="bg-light-green font-semibold">Нова пошта №1, м.Чорноморськ, 0962986084, отримувач Зелена Ольга Валеріївна</i></p>
             <p class="mt-3"><b>5. Оплата:</b></p>
             <p> Реквізити на оплату після отримання матеріалу.</p>
         </div>
