--- a/src/app/components/topbar/topbar.component.html
+++ b/src/app/components/topbar/topbar.component.html
@@ -11,7 +11,7 @@
                     </li>
                     <li>
                         <img class="float-left mr-2" src="../../../assets/images/topbar/phone.ico" alt="phone" />
-                        <a class="hover:text-gray-300" href="tel:">+380962986084</a>
+                        <a class="hover:text-gray-300" href="tel:+380962986084">+380962986084</a>
                     </li>
                     <li>
                         <img class="float-left mr-2" src="../../../assets/images/topbar/email.ico" alt="email" />
