add images materials

--- a/src/app/components/pages/rules-pages-collection/materials/materials.component.html
+++ b/src/app/components/pages/rules-pages-collection/materials/materials.component.html
@@ -8,12 +8,54 @@
           {{ title }}
         </h2>
     </div>
+    
     <div class="flex flex-wrap justify-between">
         <div class="my-10 text-base md:text-lg md:leading-relaxed md:mb-8 xl:text-base">
-            <p class="my-6">Вибір витратних матеріалів є важливим моментом при підготовці до відбору проб для дослідження. Використовуйте тільки одноразові, стерильні пробірки, контейнери, зонди, рекомендовані лабораторією, так як вони найбільш підходять для збору, зберігання і транспортування біологічного матеріалу. Так що стандартом при виборі антикоагулянтів для лабораторних досліджень є ЕДТА, що запобігає згортання крові в зразку. Використання транспортного ПЛР-середовища дозволяє надійно зберегти відібрані вами змиви і подряпини.</p>
-            <p class="my-6">Якщо вам потрібно отримати цілу (стабілізовану кров) &ndash; використовуйте пробірки з ЕДТА, а при необхідності сироватки &ndash; пробірки зі згортанням активаторів (відповідне маркування знаходиться на пробірці)</p>
+            <p class="my-6">Вибір витратних матеріалів є важливим моментом при підготовці до відбору проб для дослідження. Використовуйте тільки одноразові, стерильні пробірки, контейнери, зонди, рекомендовані лабораторією, так як вони найбільш підходять для збору, зберігання і транспортування біологічного матеріалу.</p>
+            <p class="my-6">Так що стандартом при виборі антикоагулянтів для лабораторних досліджень є ЕДТА, що запобігає згортання крові в зразку. Використання транспортного ПЛР-середовища дозволяє надійно зберегти відібрані вами змиви і подряпини. Якщо вам потрібно отримати цілу (стабілізовану кров) &ndash; використовуйте пробірки з ЕДТА, а при необхідності сироватки &ndash; пробірки зі згортанням активаторів (відповідне маркування знаходиться на пробірці)</p>
             <p class="my-6">Використовуйте урогенітальний зонд для збору матеріалу з різних слизових оболонок.</p>
             <p class="my-6">Будьте обережні при виборі витратних матеріалів, так як неправильно відібрані і збережені зразки не приймаються до досліджень.</p>
+
+            <table>
+                <tbody>
+                    <tr>
+                        <th>Матеріал для дослідження</th>
+                        <th>Фото витратних матеріалів</th>
+                    </tr>
+                    <tr>
+                        <td>&bull; Кров з ЕДТА</td>
+                        <td><img src="../../../../../assets/images/containers/edta.png" class="w-60 mx-auto bg-" alt="edta"><p>Пробирка с антикоагулянтом</p></td>
+                    </tr>
+                    <tr>
+                        <td>&bull; Змиви з кон'юнктиви та носа</td>
+                        <td><img src="../../../../../assets/images/containers/eppendorf.png" class="w-60 mx-auto" alt="eppendorf"><p>Еппендорф</p></td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <p>&bull; змив </p>
+                            <p>&bull; зішкріб </p>
+                            <p>&bull; рановий матеріал </p>
+                            <p>&bull; ексудат </p>
+                        </td>
+                        <td><img src="../../../../../assets/images/containers/aplicator.png" class="w-60 mx-auto" alt="aplicator"><p>Аплікатор з транспортної пробіркою</p></td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <p>&bull; cеча</p>
+                            <p>&bull; секрет сперми</p>
+                            <p>&bull; жовч</p>
+                        </td>
+                        <td><img src="../../../../../assets/images/containers/jar.png" class="w-60 mx-auto" alt="jar"><p>Баночка для з кришкою</p></td> 
+                    </tr>
+                    <tr>
+                        <td>
+                            <p class="block w-64 mx-auto">Зонд урогенітальний застосовується для забору матеріалу (виділення, поверхневий зішкріб)
+                                 з уретри, піхви, шийки матки для подальшого дослідження</p>
+                        </td>
+                        <td><img src="../../../../../assets/images/containers/zond.png" class="w-60 mx-auto" alt="zond"><p>Зонд урогенітальний</p></td> 
+                    </tr>
+                </tbody>
+            </table>
         </div>
     </div>
 </div>
