--- a/src/app/components/pages/guide/guide.component.html
+++ b/src/app/components/pages/guide/guide.component.html
@@ -28,11 +28,11 @@
             <p class="mt-3"><b>3. Оформлення супровідних документів:</b></p>
             <p>&ndash; маркування пробірок (вказати породу, ім'я тварини та прізвище власника на кожній пробірці, які
                 відправляються в лабораторію) (див. <a routerLink="/marking" class="text-blue">Маркування проб</a>)</p>
-            <p>&ndash; Заповніть напрямок для дослідження</p>
+            <p>&ndash; Заповніть направлення для дослідження</p>
             <div class="inline">
                 <a href="../../../../assets/files/blank.pdf" download class="gradient-button-green text-gray-900 mt-2 text-xs no-underline inline-block px-2 py-2.5 mb-5 rounded-lg font-montserrat uppercase tracking-normal min-w-fit"><img width="20" class="float-left mr-2"
                     src="https://img.icons8.com/fluency-systems-regular/48/download--v1.png" alt="Направлення на дослідження" />
-                    Напрямок на дослідження
+                    Направлення на дослідження
                 </a>
             </div>
             <p class="mt-3"><b>4. Доставка у лабораторію:</b></p>
